Update SystemObjects for iOS6 (Modified)

--- a/startup/net.siriserver.plist
+++ b/startup/net.siriserver.plist
@@ -10,7 +10,7 @@
 	<true/>
 	<key>ProgramArguments</key>
 	<array>
-		<string>./juizServer.sh</string>
+		<string>./osxserver.sh</string>
 	</array>
 	<key>UserName</key>
 	<string>root</string>
